terraform/waf.tf
# WAF for Application Load Balancer
resource "aws_wafv2_web_acl" "main" {
  name        = "alb-waf-web-acl"
  description = "WAF Web ACL for application Load Balancer"
  scope       = "REGIONAL"

  default_action {
    allow {}
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "alb-waf-web-acl"
    sampled_requests_enabled   = true
  }

  # Allow health check first to avoid nois false positives
  rule {
    name     = "AllowHealthChecks"
    priority = 0
    action {
      allow {}
    }

    statement {
      byte_match_statement {
        field_to_match {
          uri_path {}
        }
        positional_constraint = "EXACTLY"
        search_string         = "/health"
        text_transformation {
          priority = 0
          type     = "NONE"
        }
      }
    }
    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "allow-health"
      sampled_requests_enabled   = true
    }
  }

  # Managed rule groups (observe-first)
  rule {
    name     = "AWS-AWSManagedRulesCommonRuleSet"
    priority = 1

    override_action {
      count {}
    }

    statement {
      managed_rule_group_statement {
        name        = "AWSManagedRulesCommonRuleSet"
        vendor_name = "AWS"
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "Common"
      sampled_requests_enabled   = true
    }
  }

  rule {
    name     = "AWS-AWSManagedRulesKnownBadInputsRuleSet"
    priority = 2

    override_action {
      count {}
    }

    statement {
      managed_rule_group_statement {
        name        = "AWSManagedRulesKnownBadInputsRuleSet"
        vendor_name = "AWS"
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "KnownBad"
      sampled_requests_enabled   = true
    }
  }

  rule {
    name     = "AWS-AWSManagedRulesSQLiRuleSet"
    priority = 3

    override_action {
      count {}
    }

    statement {
      managed_rule_group_statement {
        name        = "AWSManagedRulesSQLiRuleSet"
        vendor_name = "AWS"
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "SQLi"
      sampled_requests_enabled   = true
    }
  }

  # Reputation/Anonymous IP Lists
  rule {
    name     = "AWS-AWSManagedRulesAmazonIPReputationList"
    priority = 4
    override_action {
      count {}
    }
    statement {
      managed_rule_group_statement {
        name        = "AWSManagedRulesAmazonIpReputationList"
        vendor_name = "AWS"
      }
    }
    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "Reputation"
      sampled_requests_enabled   = true
    }
  }

  rule {
    name     = "AWS-AWSManagedRulesAnonymousIpList"
    priority = 5
    override_action {
      count {}
    }
    statement {
      managed_rule_group_statement {
        name        = "AWSManagedRulesAnonymousIpList"
        vendor_name = "AWS"
      }
    }
    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "AnonymousIp"
      sampled_requests_enabled   = true
    }
  }


  # Rate-Limit
  rule {
    name     = "RateLimitPerIp"
    priority = 10

    action {
      block {}
    }

    statement {
      rate_based_statement {
        limit              = var.rate_limit
        aggregate_key_type = "IP"
        scope_down_statement {
          not_statement {
            statement {
              byte_match_statement {
                field_to_match {
                  uri_path {}
                }
                positional_constraint = "STARTS_WITH"
                search_string         = "/health"
                text_transformation {
                  priority = 0
                  type     = "NONE"
                }
              }
            }
          }
        }
      }
    }
    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "RateLimitRule"
      sampled_requests_enabled   = true
    }
  }

  # Geo restriction
  rule {
    name     = "GeoRestriction"
    priority = 20

    action {
      block {}
    }

    statement {
      geo_match_statement {
        country_codes = var.blocked_countries
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "GeoRestriction"
      sampled_requests_enabled   = true
    }

  }
  tags = {
    Name = "alb-waf-web-acl"
  }
}

# Associate WAF Web ACL with ALB
resource "aws_wafv2_web_acl_association" "main" {
  resource_arn = aws_lb.app_lb.arn
  web_acl_arn  = aws_wafv2_web_acl.main.arn
}


# SNS Topic for waf alerts
resource "aws_sns_topic" "waf_alerts" {
  name = "waf-compliance-alerts"
}

# Email Subscription to SNS topic
resource "aws_sns_topic_subscription" "waf_email_alerts" {
  topic_arn = aws_sns_topic.waf_alerts.arn
  protocol  = "email"
  endpoint  = var.sns_sub_email
}

# Cloudwatch alarm:Trigger on spike in blocked requests
resource "aws_cloudwatch_metric_alarm" "waf_blocks_spike" {
  alarm_name          = "WAF-BlockedRequests-Spike"
  comparison_operator = "GreaterThanThreshold"
  evaluation_periods  = 1
  metric_name         = "BlockedRequests"
  namespace           = "AWS/WAFV2"
  period              = 200
  statistic           = "Sum"
  threshold           = 10
  alarm_description   = "Spike in blocked requests across the web ACL (possible attack or falss positive)"
  treat_missing_data  = "notBreaching"
  dimensions = {
    WebACL = aws_wafv2_web_acl.main.name
    Region = data.aws_region.current.name
  }

  alarm_actions = [aws_sns_topic.waf_alerts.arn]
}


# Cloudwatch alarm:Trigger on Rate-Limit rule blocks
resource "aws_cloudwatch_metric_alarm" "waf_blocks_spike" {
  alarm_name          = "WAF-RateLimit-Triggered"
  comparison_operator = "GreaterThanThreshold"
  evaluation_periods  = 1
  metric_name         = "BlockedRequests"
  namespace           = "AWS/WAFV2"
  period              = 200
  statistic           = "Sum"
  threshold           = 10
  alarm_description   = "Rate Limit rule is blocking many requests"
  treat_missing_data  = "notBreaching"
  dimensions = {
    WebACL = aws_wafv2_web_acl.main.name
    Region = data.aws_region.current.name
    Rule   = "RateLimitRule"
  }

  alarm_actions = [aws_sns_topic.waf_alerts.arn]
}

# Cloudwatch alarm:Trigger on CommonRuleSet
resource "aws_cloudwatch_metric_alarm" "waf_common_count" {
  alarm_name          = "WAF-CommonRule-Count-High"
  comparison_operator = "GreaterThanThreshold"
  evaluation_periods  = 1
  metric_name         = "CountedRequests"
  namespace           = "AWS/WAFV2"
  period              = 200
  statistic           = "Sum"
  threshold           = 100
  alarm_description   = "CommonRuleSet is counting many matches"
  treat_missing_data  = "notBreaching"
  dimensions = {
    WebACL = aws_wafv2_web_acl.main.name
    Region = data.aws_region.current.name
    Rule   = "Common"
  }

  alarm_actions = [aws_sns_topic.waf_alerts.arn]
}
